fixed vertical alignment

--- a/W01/styles/styles.css
+++ b/W01/styles/styles.css
@@ -13,9 +13,11 @@
 }
 
 body {
+  margin: auto;
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 100vh;
 }
 
 /* Header */
